# fake_sms

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
core/: models.py  tests.py
core/api/: serializers.py  throttles.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/services/: otp_store.py
docker/django/: Dockerfile
fake_sms/: asgi.py  settings.py  urls.py  wsgi.py
portal/: urls.py  views.py
portal/templates/portal/: index.html
