[project]
name = "fake-sms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "gunicorn>=26.0.0",
]
